--- a/testdocs/bibtex/biblio.bib
+++ b/testdocs/bibtex/biblio.bib
@@ -1,5 +1,5 @@
 @BOOK{latexbook,
-   author = "Leslie Lamport",
+   author = "Leslieಠ Lamport",
    title = "{\LaTeX \rm:} {A} Document Preparation System",
    publisher = "Addison-Wesley",
    year = 1986
