delete unnecessary files, add script which compiles testdocs using "rubber" command.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,7 +1,7 @@
-v0.?? 
+v0.91 - 27 Apr 2012
+ * Moved temporary files from "tmp" to "makelatex-tmp". Without this change, anybody with important files in a subdirectory named "tmp" may lose their files.
  * Updated warning/error messages
  * Extend non-ASCII check to .bib and .sty files
- * Moved temporary files from "tmp" to "makelatex-tmp". Without this change, anybody with important files in a subdirectory named "tmp" may lose their files.
 
 v0.90 - 26 Apr 2012
  * Initial release
