minor testdoc updates

--- a/testdocs/bibtex/bibtex-test.tex
+++ b/testdocs/bibtex/bibtex-test.tex
@@ -5,7 +5,7 @@
 \section{Section 1}
 
 
-This document demonstrates how makelatex handles bibliographies and has two different citations. Here are the first \cite{chicago} and second \cite{latexbook} citations.
+This document demonstrates how makelatex handles bibliographies and has two different citations. Here are the first~\cite{chicago} and second~\cite{latexbook} citations.
 
 \lipsum[1-3]
 
