--- a/testdocs/index/index-example.tex
+++ b/testdocs/index/index-example.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 
-This document demonstrates how makelatex handles indexing. The following words will be added to the index: \index{LaTeX}, \index{kerning}, \index{tabular}.
+This document demonstrates how makelatex handles indexing. The following words will be added to the index:~\index{LaTeX},~\index{kerning},~\index{tabular}.
 
 \lipsum[1-3]
 
