--- a/testdocs/multibib/example.tex
+++ b/testdocs/multibib/example.tex
@@ -5,7 +5,7 @@
 
 A copy of multbib.sty is included in case it isn't installed on your system.
 
-This \LaTeX\ book citation will appear in the its own bibliography \citeltex{latexbook} and the Chicago Manual of Style will appear in its own bibliography \cite{chicago}.
+This \LaTeX\ book citation will appear in the its own bibliography~\citeltex{latexbook} and the Chicago Manual of Style will appear in its own bibliography~\cite{chicago}.
 
 \bibliographystyleltex{alpha}
 \bibliographyltex{biblio}
