--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -17,10 +17,13 @@ REQUIREMENTS:
  * ps2pdf (from Ghostscript)
  * pdffonts, pdfinfo (from poppler-utils)
  * bash shell (used by uconvert)
- * grep, touch
- * qpdf (recommended) or pdfopt (from ghostscript) for PDF linearization
- * Recommended: pdftk
- * Optional: pdfnup and pdfjam-slides3up (from pdfjam package)
+ * touch
+ * Recommended: qpdf or pdfopt (from ghostscript) for PDF linearization
+ * Recommended: pdftk (makelatex uses pdftk to ensure PDF metadata is preserved)
+ * chktex (flags common LaTeX problems)
+ * lacheck (flags common LaTeX problems)
+ * Optional: bibcheck (flags common bibtex problems; by Nelson H. F. Beebe)
+ * Optional: pdfnup and pdfjam-slides3up (from pdfjam or texlive-extra-utils package)
 
 
 IMAGE CONVERSION:
