fix environment variable bug

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,7 @@
-v0.93 -
+v0.93 - 30 Apr 2012
+ * Run even if TEXINPUTS or other environment variables are not set.
+ * Works correctly when makelatex, uconvert, and uconvert.conf are all in the same directory as the document (not installed).
+ * Handle \graphicspath properly
  * Improve \include{} dependency checking
  * Run ps2pdf if fonts are not compact, not subsetted or not embedded.
  * If screen-quality PDF is larger than than the original, use the original.
