improve lacheck output; improve bibentry support

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,7 @@
 v0.95
  * Keep makelatex-tmp directory if there was an error even if -k is not specified.
+ * Minor improvement to lacheck output
+ * Add better support for bibentry package
 
 v0.94 - 12 Jun 2012
  * Use bibtex8 executable (if available) instead of bibtex
