update makelatex warning mechanism which uses lacheck/chktex/bibcheck

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,6 +3,7 @@ v0.95
  * Minor improvement to lacheck output
  * Add better support for bibentry package
  * makelatex now calls "./prepost.sh post-bibtex" every time that bibtex is called. This makes it possible to modify a .bbl file before before the document is created.
+ * Removed --nowarn option; changed output to show number of warnings instead of the warnings themselves.
 
 v0.94 - 12 Jun 2012
  * Use bibtex8 executable (if available) instead of bibtex
