--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ v0.95
  * Removed --nowarn option; changed output to show number of warnings instead of the warnings themselves.
  * Better handle situation where pdffonts or pdfinfo are not installed.
  * Increase the number of checks we do to see if commands are installed before we try to use them.
+ * Remove greyscale option due to ghostscript bug #693074
 
 v0.94 - 12 Jun 2012
  * Use bibtex8 executable (if available) instead of bibtex
