--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,6 @@
 v0.95
+ * Major code reorganization: Integrate uconvert into makelatex so only the 'makelatex' script is needed.
+ * Print a better warning message when prepost.sh script exists but isn't executable.
  * Keep makelatex-tmp directory if there was an error even if -k is not specified.
  * Add better support for bibentry package
  * makelatex now calls "./prepost.sh post-bibtex" every time that bibtex is called. This makes it possible to modify a .bbl file before before the document is created.
