--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,4 @@
-v0.95
+v0.95 - 1 Jan 2014
  * Major code reorganization: Integrate uconvert into makelatex so only the 'makelatex' script is needed.
  * Print a better warning message when prepost.sh script exists but isn't executable.
  * Keep makelatex-tmp directory if there was an error even if -k is not specified.
