--- a/testdocs/unicode-complex/complex.tex
+++ b/testdocs/unicode-complex/complex.tex
@@ -7,7 +7,7 @@
 \usepackage{url}
 \begin{document}
 
-makelatex will warn about all non-ASCII characters in files unless --nonascii is used.
+You can tell makelatex to warn you when non-ASCII characters are in your file by using --nonascii
 
 This file is a UTF-8 encoded file and can be built using XeLaTeX or LuaLaTeX. However, many of the characters may be missing if your they are not supported by your font. Some of the examples below are from: \url{http://www.cl.cam.ac.uk/~mgk25/ucs/examples/UTF-8-demo.txt}
 
